# im_lite

./: .clang-format  .gitignore  CMakeLists.txt
docs/: architecture.md  ref.md
docs/logs/: 2026-07-23.md
src/: CMakeLists.txt  main.cpp
src/common/: io_status.h  message.h
src/controller/: controller.cpp  controller.h
src/coordination/: user.h  users_group.cpp  users_group.h
src/core/: binary_code.h  connections.cpp  connections.h  core.cpp  core.h  decoder.h  encoder.h  frame_header.h  message_pack.h
src/utils/: endian.h
tests/: CMakeLists.txt  test_binary_code.cpp  test_encoder.cpp  test_io_status.cpp  test_message.cpp
